--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,7 @@
 deployment:
- tasks:
- - export DEPLOYPATH=/home/shippingout/shippingoutapp.shippingout.thedevguys.co.nz
- - /bin/cp index.html $DEPLOYPATH
- - /bin/cp style.css $DEPLOYPATH
+  tasks:
+    - export DEPLOYPATH=/home/shippingoutapp.shippingout.thedevguys.co.nz/
+    - /bin/cp -r * $DEPLOYPATH #copy all from root
+#    - /bin/cp -r ./public/* $DEPLOYPATH/public_html/
+    - /bin/cp ./public/js/*.js $DEPLOYPATH/public_html/js
+    - /bin/cp ./public/css/*.css $DEPLOYPATH/public_html/css
