--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2||^8.3",
-        "laravel/framework": "^11.0",
+        "php": "^8.1|^8.2||^8.3",
+        "doctrine/dbal": "^4.1",
+        "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
